white woman token

--- a/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
@@ -110,11 +110,11 @@ width=238
 pps=130
 
 [TokenWhiteWoman]
-image="img/SpriteAtlasTexture-token"
-x=238
-y=130
-height=130
-width=130
+image="img/white_woman_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenWhiteMan]
 image="img/SpriteAtlasTexture-token"
