--- a/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
@@ -1,52 +1,37 @@
 [TokenSearch]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
-x=1538
-y=130
-x_android=260
-y_android=520
-height=130
-width=130
+image="img/search_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenInteract]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
-x=1040
-y=390
-x_android=1300
-y_android=260
-height=130
-width=130
+image="img/interact_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenExplore]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
-x=888
+image="img/explore_token"
+x=0
 y=0
-x_android=260
-y_android=780
-height=130
-width=130
+height=256
+width=256
 
 [TokenSight]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
-x=520
-y=650
-x_android=1040
-y_android=520
-height=130
-width=130
+image="img/sight_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenClue]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
-x=390
-y=260
-x_android=888
-y_android=0
-height=130
-width=130
+image="img/clue_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenDarkness]
 image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 1)-1024x512-fmt10"
@@ -117,287 +102,204 @@ image="img/walloutsidegreen"
 pps=100
 
 [TokenInvestigators]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/investigators_token"
 x=0
-y=1
+y=0
 height=248
 width=238
 pps=130
 
 [TokenWhiteWoman]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
-x=238
-y=130
-x_android=0
-y_android=768
-height=130
-width=130
+image="img/white_woman_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenWhiteMan]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=1040
 y=260
-x_android=650
-y_android=520
 height=130
 width=130
 
 [TokenGreyWoman]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=238
 y=0
-x_android=758
-y_android=0
 height=130
 width=130
 
 [TokenGreyMan]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=1278
 y=130
-x_android=1040
-y_android=390
 height=130
 width=130
 
 [TokenGreenWoman]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=368
 y=0
-x_android=780
-y_android=780
 height=130
 width=130
 
 [TokenGreenMan]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=1148
 y=130
-x_android=1408
-y_android=130
 height=130
 width=130
 
 [TokenRedWoman]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=260
 y=260
-x_android=1430
-y_android=260
 height=130
 width=130
 
 [TokenRedMan]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=1560
 y=260
-x_android=1538
-y_android=130
 height=130
 width=130
 
 [TokenPurpleWoman]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=0
 y=378
-x_android=390
-y_android=390
 height=130
 width=130
 
 [TokenPurpleMan]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=498
 y=130
-x_android=1018
-y_android=130
 height=130
 width=130
 
 [TokenOrangeWoman]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=130
 y=390
-x_android=1170
-y_android=260
 height=130
 width=130
 
 [TokenOrangeMan]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=520
 y=390
-x_android=1040
-y_android=260
 height=130
 width=130
 
 [TokenBlueWoman]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=390
 y=520
-x_android=1668
-y_android=0
 height=130
 width=130
 
 [TokenBlueMan]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=780
 y=650
-x_android=910
-y_android=520
 height=130
 width=130
 
 [TokenYellowWoman]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=130
 y=520
-x_android=520
-y_android=780
 height=130
 width=130
 
 [TokenYellowMan]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=758
 y=130
-x_android=1668
-y_android=130
 height=130
 width=130
 
 [TokenDog]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
-x=780
-y=390
-x_android=260
-y_android=390
-height=130
-width=130
+image="img/dog_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenCat]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
-x=390
-y=390
-x_android=368
-y_android=130
-height=130
-width=130
+image="img/cat_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenRichardBechman]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=1170
 y=390
-x_android=130
-y_android=650
 height=130
 width=130
 
 [TokenMildredBechman]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=910
 y=650
-x_android=1300
-y_android=390
 height=130
 width=130
 
 [TokenAgentCraven]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=1798
 y=130
-x_android=628
-y_android=130
 height=130
 width=130
 
 [TokenHowardBechman]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=1018
 y=130
-x_android=368
-y_android=0
 height=130
 width=130
 
 [TokenGraceBechman]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=1408
 y=130
-x_android=390
-y_android=260
 height=130
 width=130
 
 [TokenEugeneClemens]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=1798
 y=0
-x_android=238
-y_android=130
 height=130
 width=130
 
 [TokenJoyceLittle]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=1300
 y=390
-x_android=390
-y_android=650
 height=130
 width=130
 
 [TokenSylviaMarsh]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="{import}/img/SpriteAtlasTexture-token"
 x=780
 y=520
-x_android=628
-y_android=0
 height=130
 width=130
 
 [TokenZebulonWhateley]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=1408
 y=0
-x_android=130
-y_android=260
 height=130
 width=130
 
 [TokenBobbyFoster]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=888
 y=130
 x_android=520
@@ -406,42 +308,30 @@ height=130
 width=130
 
 [TokenVictorBlake]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=130
 y=260
-x_android=888
-y_android=130
 height=130
 width=130
 
 [TokenZadocAllen]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=520
 y=260
-x_android=390
-y_android=520
 height=130
 width=130
 
 [TokenOtheraGilman]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=628
 y=130
-x_android=650
-y_android=780
 height=130
 width=130
 
 [TokenEdnaHughes]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=758
 y=0
-x_android=910
-y_android=390
 height=130
 width=130
 
