Fixed "Token SylviaMarshdid not have an image. Skipping"

--- a/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
@@ -285,7 +285,7 @@ height=130
 width=130
 
 [TokenSylviaMarsh]
-image="{import}/img/SpriteAtlasTexture-token"
+image="img/SpriteAtlasTexture-token"
 x=780
 y=520
 height=130
