white man, grey man & woman, green man & woman, red man & woman tokens added

--- a/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
@@ -117,53 +117,53 @@ height=256
 width=256
 
 [TokenWhiteMan]
-image="img/SpriteAtlasTexture-token"
-x=1040
-y=260
-height=130
-width=130
+image="img/white_man_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenGreyWoman]
-image="img/SpriteAtlasTexture-token"
-x=238
+image="img/grey_woman_token"
+x=0
 y=0
-height=130
-width=130
+height=256
+width=256
 
 [TokenGreyMan]
-image="img/SpriteAtlasTexture-token"
-x=1278
-y=130
-height=130
-width=130
+image="img/grey_man_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenGreenWoman]
-image="img/SpriteAtlasTexture-token"
-x=368
+image="img/green_woman_token"
+x=0
 y=0
-height=130
-width=130
+height=256
+width=256
 
 [TokenGreenMan]
-image="img/SpriteAtlasTexture-token"
-x=1148
-y=130
-height=130
-width=130
+image="img/green_man_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenRedWoman]
-image="img/SpriteAtlasTexture-token"
-x=260
-y=260
-height=130
-width=130
+image="img/red_woman_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenRedMan]
-image="img/SpriteAtlasTexture-token"
-x=1560
-y=260
-height=130
-width=130
+image="img/red_man_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenPurpleWoman]
 image="img/SpriteAtlasTexture-token"
