Added yellow man & woman, blue man & woman, orange man & woman

--- a/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
@@ -180,46 +180,46 @@ height=256
 width=256
 
 [TokenOrangeWoman]
-image="img/SpriteAtlasTexture-token"
-x=130
-y=390
-height=130
-width=130
+image="img/orange_woman_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenOrangeMan]
-image="img/SpriteAtlasTexture-token"
-x=520
-y=390
-height=130
-width=130
+image="img/orange_man_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenBlueWoman]
-image="img/SpriteAtlasTexture-token"
-x=390
-y=520
-height=130
-width=130
+image="img/blue_woman_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenBlueMan]
-image="img/SpriteAtlasTexture-token"
-x=780
-y=650
-height=130
-width=130
+image="img/blue_man_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenYellowWoman]
-image="img/SpriteAtlasTexture-token"
-x=130
-y=520
-height=130
-width=130
+image="img/yellow_woman_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenYellowMan]
-image="img/SpriteAtlasTexture-token"
-x=758
-y=130
-height=130
-width=130
+image="img/yellow_man_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenDog]
 image="img/dog_token"
