--- a/unity/Assets/StreamingAssets/content/MoM/soa/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/soa/tokens.ini
@@ -1,30 +1,30 @@
 [TokenPinkWoman]
-image="img/SpriteAtlasTexture-token"
-x=520
-y=520
-height=130
-width=130
+image="img/pink_woman_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenPinkMan]
-image="img/SpriteAtlasTexture-token"
-x=260
-y=780
-height=130
-width=130
+image="img/pink_man_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenCyanWoman]
-image="img/SpriteAtlasTexture-token"
+image="img/cyan_woman_token"
 x=0
-y=768
-height=130
-width=130
+y=0
+height=256
+width=256
 
 [TokenCyanMan]
-image="img/SpriteAtlasTexture-token"
-x=650
-y=650
-height=130
-width=130
+image="img/cyan_man_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenDephinaBell]
 image="img/SpriteAtlasTexture-token"
