--- a/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
@@ -117,109 +117,109 @@ height=256
 width=256
 
 [TokenWhiteMan]
-image="img/SpriteAtlasTexture-token"
-x=1040
-y=260
-height=130
-width=130
+image="img/white_man_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenGreyWoman]
-image="img/SpriteAtlasTexture-token"
-x=238
+image="img/grey_woman_token"
+x=0
 y=0
-height=130
-width=130
+height=256
+width=256
 
 [TokenGreyMan]
-image="img/SpriteAtlasTexture-token"
-x=1278
-y=130
-height=130
-width=130
+image="img/grey_man_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenGreenWoman]
-image="img/SpriteAtlasTexture-token"
-x=368
+image="img/green_woman_token"
+x=0
 y=0
-height=130
-width=130
+height=256
+width=256
 
 [TokenGreenMan]
-image="img/SpriteAtlasTexture-token"
-x=1148
-y=130
-height=130
-width=130
+image="img/green_man_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenRedWoman]
-image="img/SpriteAtlasTexture-token"
-x=260
-y=260
-height=130
-width=130
+image="img/red_woman_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenRedMan]
-image="img/SpriteAtlasTexture-token"
-x=1560
-y=260
-height=130
-width=130
+image="img/red_man_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenPurpleWoman]
-image="img/SpriteAtlasTexture-token"
+image="img/purple_woman_token"
 x=0
-y=378
-height=130
-width=130
+y=0
+height=256
+width=256
 
 [TokenPurpleMan]
-image="img/SpriteAtlasTexture-token"
-x=498
-y=130
-height=130
-width=130
+image="img/purple_man_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenOrangeWoman]
-image="img/SpriteAtlasTexture-token"
-x=130
-y=390
-height=130
-width=130
+image="img/orange_woman_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenOrangeMan]
-image="img/SpriteAtlasTexture-token"
-x=520
-y=390
-height=130
-width=130
+image="img/orange_man_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenBlueWoman]
-image="img/SpriteAtlasTexture-token"
-x=390
-y=520
-height=130
-width=130
+image="img/blue_woman_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenBlueMan]
-image="img/SpriteAtlasTexture-token"
-x=780
-y=650
-height=130
-width=130
+image="img/blue_man_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenYellowWoman]
-image="img/SpriteAtlasTexture-token"
-x=130
-y=520
-height=130
-width=130
+image="img/yellow_woman_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenYellowMan]
-image="img/SpriteAtlasTexture-token"
-x=758
-y=130
-height=130
-width=130
+image="img/yellow_man_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenDog]
 image="img/dog_token"
@@ -285,7 +285,7 @@ height=130
 width=130
 
 [TokenSylviaMarsh]
-image="{import}/img/SpriteAtlasTexture-token"
+image="img/SpriteAtlasTexture-token"
 x=780
 y=520
 height=130
