Merge/remove data coming from BenRQ branch

--- a/unity/Assets/StreamingAssets/content/MoM/base/content_pack.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/content_pack.ini
@@ -43,4 +43,6 @@ pck Localization.German.txt
 pck Localization.Polish.txt
 pck Localization.Russian.txt
 pck Localization.Spanish.txt
-pck Localization.Italian.txtpck Localization.French.txt
+pck Localization.Italian.txt
+pck Localization.French.txt
+
