Fixed darkness and fire token

--- a/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
@@ -34,24 +34,18 @@ height=256
 width=256
 
 [TokenDarkness]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 1)-1024x512-fmt10"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 1)-1024x512-fmt34"
-x=7
-y=7
-x_android=137
-y_android=7
-height=115
-width=115
+image="img/darkness"
+x=0
+y=0
+height=256
+width=256
 
 [TokenFire]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 1)-1024x512-fmt10"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 1)-1024x512-fmt34"
-x=137
-y=137
-x_android=267
-y_android=137
-height=115
-width=115
+image="img/fire"
+x=0
+y=0
+height=117
+width=117
 
 [TokenBarricadeInside]
 image="img/barricadeinside"
