Added trapdoor token

--- a/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
@@ -77,7 +77,10 @@ pps=117
 
 [TokenTrapdoor]
 image="img/trapdoor"
-pps=117
+x=0
+y=0
+height=256
+width=256
 
 [TokenWallInside]
 image="img/wallinside"
