Added new custom tokens

--- a/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
@@ -233,39 +233,39 @@ height=256
 width=256
 
 [TokenRichardBechman]
-image="img/SpriteAtlasTexture-token"
-x=1170
-y=390
-height=130
-width=130
+image="img/richard_bechman_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenMildredBechman]
-image="img/SpriteAtlasTexture-token"
-x=910
-y=650
-height=130
-width=130
+image="img/mildred_bechman_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenAgentCraven]
-image="img/SpriteAtlasTexture-token"
-x=1798
-y=130
-height=130
-width=130
+image="img/agent_craven_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenHowardBechman]
-image="img/SpriteAtlasTexture-token"
-x=1018
-y=130
-height=130
-width=130
+image="img/howard_bechman_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenGraceBechman]
-image="img/SpriteAtlasTexture-token"
-x=1408
-y=130
-height=130
-width=130
+image="img/grace_bechman_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenEugeneClemens]
 image="img/eugene_clemens_token"
@@ -275,39 +275,39 @@ height=256
 width=256
 
 [TokenJoyceLittle]
-image="img/SpriteAtlasTexture-token"
-x=1300
-y=390
-height=130
-width=130
+image="img/joyce_little_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenSylviaMarsh]
-image="img/SpriteAtlasTexture-token"
-x=780
-y=520
-height=130
-width=130
+image="img/sylvia_marsh_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenZebulonWhateley]
-image="img/SpriteAtlasTexture-token"
-x=1408
+image="img/zebulon_whateley_token"
+x=0
 y=0
-height=130
-width=130
+height=256
+width=256
 
 [TokenBobbyFoster]
-image="img/SpriteAtlasTexture-token"
-x=888
-y=130
-height=130
-width=130
+image="img/bobby_foster_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenVictorBlake]
-image="img/SpriteAtlasTexture-token"
-x=130
-y=260
-height=130
-width=130
+image="img/victor_blake_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenZadocAllen]
 image="img/zadok_allen_token"
@@ -317,11 +317,11 @@ height=256
 width=256
 
 [TokenOtheraGilman]
-image="img/SpriteAtlasTexture-token"
-x=628
-y=130
-height=130
-width=130
+image="img/othera_gilman_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenEdnaHughes]
 image="img/edna_hughes_token"
