--- a/unity/Assets/StreamingAssets/content/MoM/hj/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/hj/tokens.ini
@@ -54,6 +54,13 @@ y=0
 height=256
 width=256
 
+[TokenWater]
+image="img/water_token"
+x=0
+y=0
+height=256
+width=256
+
 #[TokenUnknownGreyBeardedManWithCap]
 #image="img/SpriteAtlasTexture-token"
 #x=1538
