Added rift token

--- a/unity/Assets/StreamingAssets/content/MoM/hj/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/hj/tokens.ini
@@ -41,11 +41,11 @@ height=130
 width=130
 
 [TokenRift]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 1)-1024x512-fmt10"
-x=260
-y=130
-height=128
-width=128
+image="img/rift_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenWater]
 image="img/water_token"
