Removed TileSideCarboose from ship tiles

--- a/unity/Assets/StreamingAssets/content/MoM/hj/tiles.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/hj/tiles.ini
@@ -25,7 +25,7 @@ reverse=TileSidePassengerCar2
 [TileSideCarboose]
 name={ffg:TILE_CABOOSE_MAD27}
 image="{import}/img/Tile_Caboose_MAD27"
-traits=inside train ship storage small
+traits=inside train storage small
 reverse=TileSideShipDeck4
 
 [TileSideChartRoom]
