Added category "ship" to house boat base tile

--- a/unity/Assets/StreamingAssets/content/MoM/base/tiles.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/tiles.ini
@@ -158,7 +158,7 @@ reverse=TileSideStreet2
 [TileSideHouseBoat]
 name={ffg:TILE_HOUSE_BOAT_MAD20}
 image="{import}/img/Tile_House_Boat_MAD20"
-traits=outside inside small water
+traits=outside inside small water ship
 reverse=TileSideOffice
 
 [TileSideInteriorHall]
