Horrific Journeys integration (#1101)
* Horrific Journeys items, investigators, monsters, tiles

* Added reverse side of the tiles

* Added water token

* Added rift token

* Added HJ named person tokens

* Translated ship and train

* Removed TileSideCarboose from ship tiles

* Added Horrific Journeys Icon to font

* Added category "ship" to house boat base tile

* Fixed monster health

--- a/unity/Assets/StreamingAssets/content/MoM/hj/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/hj/tokens.ini
@@ -1,51 +1,58 @@
 [TokenDotFisher]
-image="img/SpriteAtlasTexture-token"
-x=260
-y=390
-height=130
-width=130
+image="img/dot_fisher_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenOfficerButler]
-image="img/SpriteAtlasTexture-token"
+image="img/officer_butler_token"
 x=0
-y=248
-height=130
-width=130
+y=0
+height=256
+width=256
 
 [TokenFredCooper]
-image="img/SpriteAtlasTexture-token"
-x=1430
-y=260
-height=130
-width=130
+image="img/fred_cooper_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenArthurHollowayIII]
-image="img/SpriteAtlasTexture-token"
-x=910
-y=390
-height=130
-width=130
+image="img/arthur_holloway_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenEthelGibbs]
-image="img/SpriteAtlasTexture-token"
-x=1668
+image="img/ethel_gibbs_token"
+x=0
 y=0
-height=130
-width=130
+height=256
+width=256
 
 [TokenDoctorRoseBarnett]
-image="img/SpriteAtlasTexture-token"
-x=1040
-y=520
-height=130
-width=130
+image="img/doctor_rose_barnett_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenRift]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 1)-1024x512-fmt10"
-x=260
-y=130
-height=128
-width=128
+image="img/rift_token"
+x=0
+y=0
+height=256
+width=256
+
+[TokenWater]
+image="img/water_token"
+x=0
+y=0
+height=256
+width=256
 
 #[TokenUnknownGreyBeardedManWithCap]
 #image="img/SpriteAtlasTexture-token"
