--- a/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
@@ -77,7 +77,10 @@ pps=117
 
 [TokenTrapdoor]
 image="img/trapdoor"
-pps=117
+x=0
+y=0
+height=256
+width=256
 
 [TokenWallInside]
 image="img/wallinside"
@@ -321,11 +324,11 @@ height=130
 width=130
 
 [TokenEdnaHughes]
-image="img/SpriteAtlasTexture-token"
-x=758
+image="img/edna_hughes_token"
+x=0
 y=0
-height=130
-width=130
+height=256
+width=256
 
 [TokenAmmiPierce]
 image="img/MAD09-allytoken-ammi"
