Crashlytics integration part 2
- set SDK version so Crashlytics does not request phone calls permission
- Add debug logs into crashlytics report
- Add new debug log so we know what happened before the crash
- Add a method to crash the app by pressing 5 times on beta text (only for alpha/beta versions)
This should help debugging issue like crash in the last screen while writing feedback #1086

--- a/unity/Assets/Plugins/Android/answers/AndroidManifest.xml
+++ b/unity/Assets/Plugins/Android/answers/AndroidManifest.xml
@@ -3,4 +3,5 @@
   <application>
   </application>
   <uses-permission android:name="android.permission.INTERNET" />
+  <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="26" />
 </manifest>
