--- a/unity/Assets/Plugins/Android/crashlytics/AndroidManifest.xml
+++ b/unity/Assets/Plugins/Android/crashlytics/AndroidManifest.xml
@@ -3,4 +3,5 @@
   <application>
   </application>
   <uses-permission android:name="android.permission.INTERNET" />
+  <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="26" />
 </manifest>
