Fixed Tommy Muldoon and Jim Culver conflict

--- a/unity/Assets/StreamingAssets/content/MoM/hj/investigators.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/hj/investigators.ini
@@ -3,7 +3,7 @@ name={ffg:INVESTIGATOR_TRISH_SCARBOROUGH}
 image="{import}/img/Circle_Investigator_Trish_Scarborough"
 traits=female
 
-[HeroTommyMuldoon]
+[HeroJimCulver]
 name={ffg:INVESTIGATOR_JIM_CULVER}
 image="{import}/img/Circle_Investigator_Jim_Culver"
 traits=male
