Added Storm of Spirits to Agnes Baker

--- a/unity/Assets/StreamingAssets/content/MoM/hj/investigators.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/hj/investigators.ini
@@ -18,3 +18,4 @@ traits=male
 name={ffg:INVESTIGATOR_AGNES_BAKER}
 image="{import}/img/Circle_Investigator_Agnes_Baker"
 traits=female
+item=ItemSpellStormOfSpirits
