#1181 Adding tiles present in Road to Legend 1.5.3

--- a/unity/Assets/StreamingAssets/content/D2E/base/tiles.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/base/tiles.ini
@@ -290,10 +290,9 @@ reverse=TileSide18B
 
 [TileSide18B]
 name="18B"
-top=21.5
-left=3.5
-pps=72
-image="img/018B"
+top=59
+left=33
+image="{import}/img/018B"
 traits=inside
 reverse=TileSide18A
 
