--- a/unity/Assets/StreamingAssets/content/D2E/boxed/lor/tiles.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/boxed/lor/tiles.ini
@@ -73,10 +73,9 @@ reverse=TileSide40B
 
 [TileSide40B]
 name="40B"
-top=72
-left=72
-pps=72
-image="img/040B"
+top=249.5
+left=197
+image="{import}/img/040B"
 traits=inside
 reverse=TileSide40A
 
@@ -106,10 +105,9 @@ reverse=TileSide42B
 
 [TileSide42B]
 name="42B"
-top=72
-left=72
-pps=72
-image="img/042B"
+top=407
+left=197
+image="{import}/img/042B"
 traits=inside
 reverse=TileSide42A
 
