--- a/unity/Assets/StreamingAssets/content/D2E/boxed/lotw/tiles.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/boxed/lotw/tiles.ini
@@ -94,9 +94,8 @@ reverse=TileSideS1B
 
 [TileSideS1B]
 name="S1B"
-top=72
-left=72
-pps=72
-image="img/S1B"
+top=46
+left=46
+image="{import}/img/S001B"
 traits=inside
 reverse=TileSideS1A
