#1181 Adding EoD images from RtL.

--- a/unity/Assets/StreamingAssets/content/D2E/base/images.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/base/images.ini
@@ -293,3 +293,36 @@ image="img/MediumEditorTransparency"
 
 [ImageHighEditorTransparency]
 image="img/HighEditorTransparency"
+
+[ImageEmbersOfDreadIcon]
+image="{import}/img/EmbersOfDread_Icon"
+
+[ImageEmbersOfDreadLogo]
+image="{import}/img/Logo_EmbersOfDread"
+
+[ImageEmbersOfDreadMap]
+image="{import}/img/Map-EmbersofDread"
+
+[ImageQuestsCaveofWonders]
+image="{import}/img/Quests_CaveofWonders"
+
+[ImageQuestsFortRodric]
+image="{import}/img/Quests_FortRodric"
+
+[ImageQuestsRiverwatch]
+image="{import}/img/Quests_Riverwatch"
+
+[ImageQuestsSkydown]
+image="{import}/img/Quests_Skydown"
+
+[ImageQuestsSudanya]
+image="{import}/img/Quests_Sudanya"
+
+[ImageQuestsVynelvale]
+image="{import}/img/Quests_Vynelvale"
+
+[ImageRiverwatchIcon]
+image="{import}/img/Riverwatch_Icon"
+
+[ImageRiverwatchBackground]
+image="{import}/img/RiverwatchBackground"
