#920 Fixing SoN tile positions

--- a/unity/Assets/StreamingAssets/content/D2E/boxed/son/tiles.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/boxed/son/tiles.ini
@@ -138,10 +138,9 @@ reverse=TileSide58B
 
 [TileSide58B]
 name="58B"
-top=72
-left=72
-pps=72
-image="img/058B"
+top=341.5
+left=197
+image="{import}/img/058B"
 traits=blackrealm
 reverse=TileSide58A
 
@@ -163,7 +162,7 @@ reverse=TileSide59A
 
 [TileSide60A]
 name="60A"
-top=197
+top=249.5
 left=236.5
 image="{import}/img/060A"
 traits=city tavern
@@ -171,8 +170,8 @@ reverse=TileSide60B
 
 [TileSide60B]
 name="60B"
-top=197
-left=232.5
+top=249.5
+left=262.5
 image="{import}/img/060B"
 traits=blackrealm
 reverse=TileSide60A
@@ -187,9 +186,9 @@ reverse=TileSide61B
 
 [TileSide61B]
 name="61B"
-top=72
-left=72
-pps=72
+top=70
+left=70
+pps=70
 image="img/061B"
 traits=blackrealm
 reverse=TileSide61A
@@ -228,18 +227,18 @@ reverse=TileSide63A
 
 [TileSide64A]
 name="64A"
-top=72
-left=72
-pps=72
+top=70
+left=70
+pps=70
 image="img/064A"
 traits=city
 reverse=TileSide64B
 
 [TileSide64B]
 name="64B"
-top=72
-left=72
-pps=72
+top=70
+left=70
+pps=70
 image="img/064B"
 traits=blackrealm
 reverse=TileSide64A
@@ -398,9 +397,9 @@ reverse=TileSideTransitionSoN2B
 
 [TileSideTransitionSoN2B]
 name="TransitionSoN2B"
-top=72
-left=72
-pps=72
+top=70
+left=70
+pps=70
 image="img/transition2B"
 traits=blackrealm city transition
 reverse=TileSideTransitionSoN2A
