#1010 Removing monster activations that require scenario knowledge.

--- a/unity/Assets/StreamingAssets/content/MoM/base/activations.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/activations.ini
@@ -1781,11 +1781,11 @@ master={ffg:MONSTER_HOUND_OF_TINDALOS_ATTACK_18}
 movebutton={ffg:UI_NOT_IN_SPACE}
 move={ffg:MONSTER_HOUND_OF_TINDALOS_MOVE_00a}
 
-[MonsterActivationHoundOfTindalos19]
-ability={ffg:MONSTER_HOUND_OF_TINDALOS_MOVE_19}
-master={ffg:MONSTER_HOUND_OF_TINDALOS_ATTACK_19}
-movebutton={ffg:UI_NOT_IN_SPACE}
-move={ffg:MONSTER_HOUND_OF_TINDALOS_MOVE_00a}
+;[MonsterActivationHoundOfTindalos19]
+;ability={ffg:MONSTER_HOUND_OF_TINDALOS_MOVE_19}
+;master={ffg:MONSTER_HOUND_OF_TINDALOS_ATTACK_19}
+;movebutton={ffg:UI_NOT_IN_SPACE}
+;move={ffg:MONSTER_HOUND_OF_TINDALOS_MOVE_00a}
 
 [MonsterActivationHoundOfTindalos20]
 ability={ffg:MONSTER_HOUND_OF_TINDALOS_MOVE_20}
@@ -1819,11 +1819,11 @@ master={ffg:MONSTER_HUNTING_HORROR_ATTACK_01}
 movebutton={ffg:UI_NOT_IN_RANGE}
 move={ffg:MONSTER_HUNTING_HORROR_MOVE_00}
 
-[MonsterActivationHuntingHorror02]
-ability={ffg:MONSTER_HUNTING_HORROR_MOVE_02}
-master={ffg:MONSTER_HUNTING_HORROR_ATTACK_02}
-movebutton={ffg:UI_NOT_IN_RANGE}
-move={ffg:MONSTER_HUNTING_HORROR_MOVE_00}
+;[MonsterActivationHuntingHorror02]
+;ability={ffg:MONSTER_HUNTING_HORROR_MOVE_02}
+;master={ffg:MONSTER_HUNTING_HORROR_ATTACK_02}
+;movebutton={ffg:UI_NOT_IN_RANGE}
+;move={ffg:MONSTER_HUNTING_HORROR_MOVE_00}
 
 [MonsterActivationHuntingHorror03]
 ability={ffg:MONSTER_HUNTING_HORROR_MOVE_03}
@@ -1873,17 +1873,17 @@ master={ffg:MONSTER_HUNTING_HORROR_ATTACK_10}
 movebutton={ffg:UI_NOT_IN_RANGE}
 move={ffg:MONSTER_HUNTING_HORROR_MOVE_00}
 
-[MonsterActivationHuntingHorror11]
-ability={ffg:MONSTER_HUNTING_HORROR_MOVE_11}
-master={ffg:MONSTER_HUNTING_HORROR_ATTACK_11}
-movebutton={ffg:UI_NOT_IN_RANGE}
-move={ffg:MONSTER_HUNTING_HORROR_MOVE_00}
+;[MonsterActivationHuntingHorror11]
+;ability={ffg:MONSTER_HUNTING_HORROR_MOVE_11}
+;master={ffg:MONSTER_HUNTING_HORROR_ATTACK_11}
+;movebutton={ffg:UI_NOT_IN_RANGE}
+;move={ffg:MONSTER_HUNTING_HORROR_MOVE_00}
 
-[MonsterActivationHuntingHorror12]
-ability={ffg:MONSTER_HUNTING_HORROR_MOVE_12}
-master={ffg:MONSTER_HUNTING_HORROR_ATTACK_12}
-movebutton={ffg:UI_NOT_IN_RANGE}
-move={ffg:MONSTER_HUNTING_HORROR_MOVE_00}
+;[MonsterActivationHuntingHorror12]
+;ability={ffg:MONSTER_HUNTING_HORROR_MOVE_12}
+;master={ffg:MONSTER_HUNTING_HORROR_ATTACK_12}
+;movebutton={ffg:UI_NOT_IN_RANGE}
+;move={ffg:MONSTER_HUNTING_HORROR_MOVE_00}
 
 [MonsterActivationHuntingHorror13]
 ability={ffg:MONSTER_HUNTING_HORROR_MOVE_13}
@@ -2222,10 +2222,10 @@ ability={ffg:MONSTER_NIGHTGAUNT_MOVE_01}
 master={ffg:MONSTER_NIGHTGAUNT_ATTACK_01}
 movebutton={ffg:UI_NOT_IN_SPACE}
 
-[MonsterActivationNightgaunt02]
-ability={ffg:MONSTER_NIGHTGAUNT_MOVE_02}
-master={ffg:MONSTER_NIGHTGAUNT_ATTACK_02}
-movebutton={ffg:UI_NOT_IN_SPACE}
+;[MonsterActivationNightgaunt02]
+;ability={ffg:MONSTER_NIGHTGAUNT_MOVE_02}
+;master={ffg:MONSTER_NIGHTGAUNT_ATTACK_02}
+;movebutton={ffg:UI_NOT_IN_SPACE}
 
 [MonsterActivationNightgaunt03]
 ability={ffg:MONSTER_NIGHTGAUNT_MOVE_03}
@@ -2242,10 +2242,10 @@ ability={ffg:MONSTER_NIGHTGAUNT_MOVE_05}
 master={ffg:MONSTER_NIGHTGAUNT_ATTACK_05}
 movebutton={ffg:UI_NOT_IN_SPACE}
 
-[MonsterActivationNightgaunt06]
-ability={ffg:MONSTER_NIGHTGAUNT_MOVE_06}
-master={ffg:MONSTER_NIGHTGAUNT_ATTACK_06}
-movebutton={ffg:UI_NOT_IN_SPACE}
+;[MonsterActivationNightgaunt06]
+;ability={ffg:MONSTER_NIGHTGAUNT_MOVE_06}
+;master={ffg:MONSTER_NIGHTGAUNT_ATTACK_06}
+;movebutton={ffg:UI_NOT_IN_SPACE}
 
 [MonsterActivationNightgaunt07]
 ability={ffg:MONSTER_NIGHTGAUNT_MOVE_07}
