#1199 Fixing Lost Legends Item references.

--- a/unity/Assets/StreamingAssets/content/D2E/boxed/ll/items.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/boxed/ll/items.ini
@@ -1,6 +1,6 @@
 [ItemStaffOfConflux]
-name={ffg:ITEM_STAFF_OF_CONFLUX}
-image="{import}/img/Item_Staff Of Conflux"
+name={ffg:ITEM_SPIRE_OF_CONFLUX}
+image="{import}/img/Item_Spire Of Conflux"
 traits=magic staff class
 minfame=insignificant
 maxfame=insignificant
@@ -15,7 +15,7 @@ maxfame=insignificant
 price=25
 
 [ItemHarvesterScythe]
-name={ffg:ITEM_HARVESTERSCYTHE}
+name={ffg:ITEM_HARVESTER_SCYTHE}
 image="{import}/img/Item_Harvester Scythe"
 traits=magic blade staff class
 minfame=insignificant
