#1201 HJ initial monster support

--- a/unity/Assets/StreamingAssets/content/MoM/base/evade.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/evade.ini
@@ -1445,3 +1445,195 @@ text={ffg:MONSTER_WRAITH_EVADE_11}
 [EvadeWraith12]
 monster=Wraith
 text={ffg:MONSTER_WRAITH_EVADE_12}
+
+[EvadeWarlock01]
+monster=Warlock
+text={ffg:MONSTER_WARLOCK_EVADE_01}
+
+[EvadeWarlock02]
+monster=Warlock
+text={ffg:MONSTER_WARLOCK_EVADE_02}
+
+[EvadeWarlock03]
+monster=Warlock
+text={ffg:MONSTER_WARLOCK_EVADE_03}
+
+[EvadeWarlock04]
+monster=Warlock
+text={ffg:MONSTER_WARLOCK_EVADE_04}
+
+[EvadeWarlock05]
+monster=Warlock
+text={ffg:MONSTER_WARLOCK_EVADE_05}
+
+[EvadeWarlock06]
+monster=Warlock
+text={ffg:MONSTER_WARLOCK_EVADE_06}
+
+[EvadeWarlock07]
+monster=Warlock
+text={ffg:MONSTER_WARLOCK_EVADE_07}
+
+[EvadeWarlock08]
+monster=Warlock
+text={ffg:MONSTER_WARLOCK_EVADE_08}
+
+[EvadeWarlock09]
+monster=Warlock
+text={ffg:MONSTER_WARLOCK_EVADE_09}
+
+[EvadeWarlock10]
+monster=Warlock
+text={ffg:MONSTER_WARLOCK_EVADE_10}
+
+[EvadeWarlock11]
+monster=Warlock
+text={ffg:MONSTER_WARLOCK_EVADE_11}
+
+[EvadeWarlock12]
+monster=Warlock
+text={ffg:MONSTER_WARLOCK_EVADE_12}
+
+[EvadeDimensionalShambler01]
+monster=DimensionalShambler
+text={ffg:MONSTER_DIMENSIONAL_SHAMBLER_EVADE_01}
+
+[EvadeDimensionalShambler02]
+monster=DimensionalShambler
+text={ffg:MONSTER_DIMENSIONAL_SHAMBLER_EVADE_02}
+
+[EvadeDimensionalShambler03]
+monster=DimensionalShambler
+text={ffg:MONSTER_DIMENSIONAL_SHAMBLER_EVADE_03}
+
+[EvadeDimensionalShambler04]
+monster=DimensionalShambler
+text={ffg:MONSTER_DIMENSIONAL_SHAMBLER_EVADE_04}
+
+[EvadeDimensionalShambler05]
+monster=DimensionalShambler
+text={ffg:MONSTER_DIMENSIONAL_SHAMBLER_EVADE_05}
+
+[EvadeDimensionalShambler06]
+monster=DimensionalShambler
+text={ffg:MONSTER_DIMENSIONAL_SHAMBLER_EVADE_06}
+
+[EvadeDimensionalShambler07]
+monster=DimensionalShambler
+text={ffg:MONSTER_DIMENSIONAL_SHAMBLER_EVADE_07}
+
+[EvadeDimensionalShambler08]
+monster=DimensionalShambler
+text={ffg:MONSTER_DIMENSIONAL_SHAMBLER_EVADE_08}
+
+[EvadeDimensionalShambler09]
+monster=DimensionalShambler
+text={ffg:MONSTER_DIMENSIONAL_SHAMBLER_EVADE_09}
+
+[EvadeDimensionalShambler10]
+monster=DimensionalShambler
+text={ffg:MONSTER_DIMENSIONAL_SHAMBLER_EVADE_10}
+
+[EvadeDimensionalShambler11]
+monster=DimensionalShambler
+text={ffg:MONSTER_DIMENSIONAL_SHAMBLER_EVADE_11}
+
+[EvadeDimensionalShambler12]
+monster=DimensionalShambler
+text={ffg:MONSTER_DIMENSIONAL_SHAMBLER_EVADE_12}
+
+[EvadeHuntingDeepOne01]
+monster=HuntingDeepOne
+text={ffg:MONSTER_HUNTING_DEEP_ONE_EVADE_01}
+
+[EvadeHuntingDeepOne02]
+monster=HuntingDeepOne
+text={ffg:MONSTER_HUNTING_DEEP_ONE_EVADE_02}
+
+[EvadeHuntingDeepOne03]
+monster=HuntingDeepOne
+text={ffg:MONSTER_HUNTING_DEEP_ONE_EVADE_03}
+
+[EvadeHuntingDeepOne04]
+monster=HuntingDeepOne
+text={ffg:MONSTER_HUNTING_DEEP_ONE_EVADE_04}
+
+[EvadeHuntingDeepOne05]
+monster=HuntingDeepOne
+text={ffg:MONSTER_HUNTING_DEEP_ONE_EVADE_05}
+
+[EvadeHuntingDeepOne06]
+monster=HuntingDeepOne
+text={ffg:MONSTER_HUNTING_DEEP_ONE_EVADE_06}
+
+[EvadeHuntingDeepOne07]
+monster=HuntingDeepOne
+text={ffg:MONSTER_HUNTING_DEEP_ONE_EVADE_07}
+
+[EvadeHuntingDeepOne08]
+monster=HuntingDeepOne
+text={ffg:MONSTER_HUNTING_DEEP_ONE_EVADE_08}
+
+[EvadeHuntingDeepOne09]
+monster=HuntingDeepOne
+text={ffg:MONSTER_HUNTING_DEEP_ONE_EVADE_09}
+
+[EvadeHuntingDeepOne10]
+monster=HuntingDeepOne
+text={ffg:MONSTER_HUNTING_DEEP_ONE_EVADE_10}
+
+[EvadeHuntingDeepOne11]
+monster=HuntingDeepOne
+text={ffg:MONSTER_HUNTING_DEEP_ONE_EVADE_11}
+
+[EvadeHuntingDeepOne12]
+monster=HuntingDeepOne
+text={ffg:MONSTER_HUNTING_DEEP_ONE_EVADE_12}
+
+[EvadeFormlessSpawn01]
+monster=FormlessSpawn
+text={ffg:MONSTER_FORMLESS_SPAWN_EVADE_01}
+
+[EvadeFormlessSpawn02]
+monster=FormlessSpawn
+text={ffg:MONSTER_FORMLESS_SPAWN_EVADE_02}
+
+[EvadeFormlessSpawn03]
+monster=FormlessSpawn
+text={ffg:MONSTER_FORMLESS_SPAWN_EVADE_03}
+
+[EvadeFormlessSpawn04]
+monster=FormlessSpawn
+text={ffg:MONSTER_FORMLESS_SPAWN_EVADE_04}
+
+[EvadeFormlessSpawn05]
+monster=FormlessSpawn
+text={ffg:MONSTER_FORMLESS_SPAWN_EVADE_05}
+
+[EvadeFormlessSpawn06]
+monster=FormlessSpawn
+text={ffg:MONSTER_FORMLESS_SPAWN_EVADE_06}
+
+[EvadeFormlessSpawn07]
+monster=FormlessSpawn
+text={ffg:MONSTER_FORMLESS_SPAWN_EVADE_07}
+
+[EvadeFormlessSpawn08]
+monster=FormlessSpawn
+text={ffg:MONSTER_FORMLESS_SPAWN_EVADE_08}
+
+[EvadeFormlessSpawn09]
+monster=FormlessSpawn
+text={ffg:MONSTER_FORMLESS_SPAWN_EVADE_09}
+
+[EvadeFormlessSpawn10]
+monster=FormlessSpawn
+text={ffg:MONSTER_FORMLESS_SPAWN_EVADE_10}
+
+[EvadeFormlessSpawn11]
+monster=FormlessSpawn
+text={ffg:MONSTER_FORMLESS_SPAWN_EVADE_11}
+
+[EvadeFormlessSpawn12]
+monster=FormlessSpawn
+text={ffg:MONSTER_FORMLESS_SPAWN_EVADE_12}
