--- a/unity/Assets/StreamingAssets/content/MoM/base/horror.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/horror.ini
@@ -1473,3 +1473,195 @@ text={ffg:MONSTER_WRAITH_HORROR_11}
 [HorrorWraith12]
 monster=Wraith
 text={ffg:MONSTER_WRAITH_HORROR_12}
+
+[HorrorWarlock01]
+monster=Warlock
+text={ffg:MONSTER_WARLOCK_HORROR_01}
+
+[HorrorWarlock02]
+monster=Warlock
+text={ffg:MONSTER_WARLOCK_HORROR_02}
+
+[HorrorWarlock03]
+monster=Warlock
+text={ffg:MONSTER_WARLOCK_HORROR_03}
+
+[HorrorWarlock04]
+monster=Warlock
+text={ffg:MONSTER_WARLOCK_HORROR_04}
+
+[HorrorWarlock05]
+monster=Warlock
+text={ffg:MONSTER_WARLOCK_HORROR_05}
+
+[HorrorWarlock06]
+monster=Warlock
+text={ffg:MONSTER_WARLOCK_HORROR_06}
+
+[HorrorWarlock07]
+monster=Warlock
+text={ffg:MONSTER_WARLOCK_HORROR_07}
+
+[HorrorWarlock08]
+monster=Warlock
+text={ffg:MONSTER_WARLOCK_HORROR_08}
+
+[HorrorWarlock09]
+monster=Warlock
+text={ffg:MONSTER_WARLOCK_HORROR_09}
+
+[HorrorWarlock10]
+monster=Warlock
+text={ffg:MONSTER_WARLOCK_HORROR_10}
+
+[HorrorWarlock11]
+monster=Warlock
+text={ffg:MONSTER_WARLOCK_HORROR_11}
+
+[HorrorWarlock12]
+monster=Warlock
+text={ffg:MONSTER_WARLOCK_HORROR_12}
+
+[HorrorDimensionalShambler01]
+monster=DimensionalShambler
+text={ffg:MONSTER_DIMENSIONAL_SHAMBLER_HORROR_01}
+
+[HorrorDimensionalShambler02]
+monster=DimensionalShambler
+text={ffg:MONSTER_DIMENSIONAL_SHAMBLER_HORROR_02}
+
+[HorrorDimensionalShambler03]
+monster=DimensionalShambler
+text={ffg:MONSTER_DIMENSIONAL_SHAMBLER_HORROR_03}
+
+[HorrorDimensionalShambler04]
+monster=DimensionalShambler
+text={ffg:MONSTER_DIMENSIONAL_SHAMBLER_HORROR_04}
+
+[HorrorDimensionalShambler05]
+monster=DimensionalShambler
+text={ffg:MONSTER_DIMENSIONAL_SHAMBLER_HORROR_05}
+
+[HorrorDimensionalShambler06]
+monster=DimensionalShambler
+text={ffg:MONSTER_DIMENSIONAL_SHAMBLER_HORROR_06}
+
+[HorrorDimensionalShambler07]
+monster=DimensionalShambler
+text={ffg:MONSTER_DIMENSIONAL_SHAMBLER_HORROR_07}
+
+[HorrorDimensionalShambler08]
+monster=DimensionalShambler
+text={ffg:MONSTER_DIMENSIONAL_SHAMBLER_HORROR_08}
+
+[HorrorDimensionalShambler09]
+monster=DimensionalShambler
+text={ffg:MONSTER_DIMENSIONAL_SHAMBLER_HORROR_09}
+
+[HorrorDimensionalShambler10]
+monster=DimensionalShambler
+text={ffg:MONSTER_DIMENSIONAL_SHAMBLER_HORROR_10}
+
+[HorrorDimensionalShambler11]
+monster=DimensionalShambler
+text={ffg:MONSTER_DIMENSIONAL_SHAMBLER_HORROR_11}
+
+[HorrorDimensionalShambler12]
+monster=DimensionalShambler
+text={ffg:MONSTER_DIMENSIONAL_SHAMBLER_HORROR_12}
+
+[HorrorHuntingDeepOne01]
+monster=HuntingDeepOne
+text={ffg:MONSTER_HUNTING_DEEP_ONE_HORROR_01}
+
+[HorrorHuntingDeepOne02]
+monster=HuntingDeepOne
+text={ffg:MONSTER_HUNTING_DEEP_ONE_HORROR_02}
+
+[HorrorHuntingDeepOne03]
+monster=HuntingDeepOne
+text={ffg:MONSTER_HUNTING_DEEP_ONE_HORROR_03}
+
+[HorrorHuntingDeepOne04]
+monster=HuntingDeepOne
+text={ffg:MONSTER_HUNTING_DEEP_ONE_HORROR_04}
+
+[HorrorHuntingDeepOne05]
+monster=HuntingDeepOne
+text={ffg:MONSTER_HUNTING_DEEP_ONE_HORROR_05}
+
+[HorrorHuntingDeepOne06]
+monster=HuntingDeepOne
+text={ffg:MONSTER_HUNTING_DEEP_ONE_HORROR_06}
+
+[HorrorHuntingDeepOne07]
+monster=HuntingDeepOne
+text={ffg:MONSTER_HUNTING_DEEP_ONE_HORROR_07}
+
+[HorrorHuntingDeepOne08]
+monster=HuntingDeepOne
+text={ffg:MONSTER_HUNTING_DEEP_ONE_HORROR_08}
+
+[HorrorHuntingDeepOne09]
+monster=HuntingDeepOne
+text={ffg:MONSTER_HUNTING_DEEP_ONE_HORROR_09}
+
+[HorrorHuntingDeepOne10]
+monster=HuntingDeepOne
+text={ffg:MONSTER_HUNTING_DEEP_ONE_HORROR_10}
+
+[HorrorHuntingDeepOne11]
+monster=HuntingDeepOne
+text={ffg:MONSTER_HUNTING_DEEP_ONE_HORROR_11}
+
+[HorrorHuntingDeepOne12]
+monster=HuntingDeepOne
+text={ffg:MONSTER_HUNTING_DEEP_ONE_HORROR_12}
+
+[HorrorFormlessSpawn01]
+monster=FormlessSpawn
+text={ffg:MONSTER_FORMLESS_SPAWN_HORROR_01}
+
+[HorrorFormlessSpawn02]
+monster=FormlessSpawn
+text={ffg:MONSTER_FORMLESS_SPAWN_HORROR_02}
+
+[HorrorFormlessSpawn03]
+monster=FormlessSpawn
+text={ffg:MONSTER_FORMLESS_SPAWN_HORROR_03}
+
+[HorrorFormlessSpawn04]
+monster=FormlessSpawn
+text={ffg:MONSTER_FORMLESS_SPAWN_HORROR_04}
+
+[HorrorFormlessSpawn05]
+monster=FormlessSpawn
+text={ffg:MONSTER_FORMLESS_SPAWN_HORROR_05}
+
+[HorrorFormlessSpawn06]
+monster=FormlessSpawn
+text={ffg:MONSTER_FORMLESS_SPAWN_HORROR_06}
+
+[HorrorFormlessSpawn07]
+monster=FormlessSpawn
+text={ffg:MONSTER_FORMLESS_SPAWN_HORROR_07}
+
+[HorrorFormlessSpawn08]
+monster=FormlessSpawn
+text={ffg:MONSTER_FORMLESS_SPAWN_HORROR_08}
+
+[HorrorFormlessSpawn09]
+monster=FormlessSpawn
+text={ffg:MONSTER_FORMLESS_SPAWN_HORROR_09}
+
+[HorrorFormlessSpawn10]
+monster=FormlessSpawn
+text={ffg:MONSTER_FORMLESS_SPAWN_HORROR_10}
+
+[HorrorFormlessSpawn11]
+monster=FormlessSpawn
+text={ffg:MONSTER_FORMLESS_SPAWN_HORROR_11}
+
+[HorrorFormlessSpawn12]
+monster=FormlessSpawn
+text={ffg:MONSTER_FORMLESS_SPAWN_HORROR_12}
