--- a/unity/Assets/StreamingAssets/content/MoM/base/activations.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/activations.ini
@@ -4205,139 +4205,160 @@ move={ffg:MONSTER_COMMON_MOVE_02}
 ability={ffg:MONSTER_DIMENSIONAL_SHAMBLER_MOVE_01}
 master={ffg:MONSTER_DIMENSIONAL_SHAMBLER_ATTACK_01}
 movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_DIMENSIONAL_SHAMBLER_00a}
 
 [MonsterActivationDimensionalShambler02]
 ability={ffg:MONSTER_DIMENSIONAL_SHAMBLER_MOVE_02}
 master={ffg:MONSTER_DIMENSIONAL_SHAMBLER_ATTACK_02}
 movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_DIMENSIONAL_SHAMBLER_00a}
 
 [MonsterActivationDimensionalShambler03]
 ability={ffg:MONSTER_DIMENSIONAL_SHAMBLER_MOVE_03}
 master={ffg:MONSTER_DIMENSIONAL_SHAMBLER_ATTACK_03}
 movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_DIMENSIONAL_SHAMBLER_00a}
 
 [MonsterActivationDimensionalShambler04]
 ability={ffg:MONSTER_DIMENSIONAL_SHAMBLER_MOVE_04}
 master={ffg:MONSTER_DIMENSIONAL_SHAMBLER_ATTACK_04}
 movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_DIMENSIONAL_SHAMBLER_00a}
 
 [MonsterActivationDimensionalShambler05]
 ability={ffg:MONSTER_DIMENSIONAL_SHAMBLER_MOVE_05}
 master={ffg:MONSTER_DIMENSIONAL_SHAMBLER_ATTACK_05}
-movebutton={ffg:UI_NOT_IN_SPACE}
+movebutton={ffg:UI_NOT_WITHIN_MOVE}
+move={ffg:MONSTER_DIMENSIONAL_SHAMBLER_00a}
 
 [MonsterActivationDimensionalShambler06]
 ability={ffg:MONSTER_DIMENSIONAL_SHAMBLER_MOVE_06}
 master={ffg:MONSTER_DIMENSIONAL_SHAMBLER_ATTACK_06}
 movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_DIMENSIONAL_SHAMBLER_00a}
 
 [MonsterActivationDimensionalShambler07]
 ability={ffg:MONSTER_DIMENSIONAL_SHAMBLER_MOVE_07}
 master={ffg:MONSTER_DIMENSIONAL_SHAMBLER_ATTACK_07}
 movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_DIMENSIONAL_SHAMBLER_00a}
 
 [MonsterActivationDimensionalShambler08]
 ability={ffg:MONSTER_DIMENSIONAL_SHAMBLER_MOVE_08}
 master={ffg:MONSTER_DIMENSIONAL_SHAMBLER_ATTACK_08}
 movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_DIMENSIONAL_SHAMBLER_00a}
 
 [MonsterActivationDimensionalShambler09]
 ability={ffg:MONSTER_DIMENSIONAL_SHAMBLER_MOVE_09}
 master={ffg:MONSTER_DIMENSIONAL_SHAMBLER_ATTACK_09}
 movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_DIMENSIONAL_SHAMBLER_00a}
 
 [MonsterActivationDimensionalShambler10]
 ability={ffg:MONSTER_DIMENSIONAL_SHAMBLER_MOVE_10}
 master={ffg:MONSTER_DIMENSIONAL_SHAMBLER_ATTACK_10}
 movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_DIMENSIONAL_SHAMBLER_00a}
 
 [MonsterActivationDimensionalShambler11]
 ability={ffg:MONSTER_DIMENSIONAL_SHAMBLER_MOVE_11}
 master={ffg:MONSTER_DIMENSIONAL_SHAMBLER_ATTACK_11}
 movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_DIMENSIONAL_SHAMBLER_00a}
 
 [MonsterActivationDimensionalShambler12]
 ability={ffg:MONSTER_DIMENSIONAL_SHAMBLER_MOVE_12}
 master={ffg:MONSTER_DIMENSIONAL_SHAMBLER_ATTACK_12}
 movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_DIMENSIONAL_SHAMBLER_00a}
 
 [MonsterActivationDimensionalShambler13]
 ability={ffg:MONSTER_DIMENSIONAL_SHAMBLER_MOVE_13}
 master={ffg:MONSTER_DIMENSIONAL_SHAMBLER_ATTACK_13}
 movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_DIMENSIONAL_SHAMBLER_00a}
 
 [MonsterActivationDimensionalShambler14]
 ability={ffg:MONSTER_DIMENSIONAL_SHAMBLER_MOVE_14}
 master={ffg:MONSTER_DIMENSIONAL_SHAMBLER_ATTACK_14}
 movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_DIMENSIONAL_SHAMBLER_00a}
 
 [MonsterActivationDimensionalShambler15]
 ability={ffg:MONSTER_DIMENSIONAL_SHAMBLER_MOVE_15}
 master={ffg:MONSTER_DIMENSIONAL_SHAMBLER_ATTACK_15}
 movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_DIMENSIONAL_SHAMBLER_00a}
 
 [MonsterActivationDimensionalShambler16]
 ability={ffg:MONSTER_DIMENSIONAL_SHAMBLER_MOVE_16}
 master={ffg:MONSTER_DIMENSIONAL_SHAMBLER_ATTACK_16}
 movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_DIMENSIONAL_SHAMBLER_00a}
 
 [MonsterActivationDimensionalShambler17]
 ability={ffg:MONSTER_DIMENSIONAL_SHAMBLER_MOVE_17}
 master={ffg:MONSTER_DIMENSIONAL_SHAMBLER_ATTACK_17}
 movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_DIMENSIONAL_SHAMBLER_00a}
 
 [MonsterActivationDimensionalShambler18]
 ability={ffg:MONSTER_DIMENSIONAL_SHAMBLER_MOVE_18}
 master={ffg:MONSTER_DIMENSIONAL_SHAMBLER_ATTACK_18}
 movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_DIMENSIONAL_SHAMBLER_00a}
 
 [MonsterActivationDimensionalShambler19]
 ability={ffg:MONSTER_DIMENSIONAL_SHAMBLER_MOVE_19}
 master={ffg:MONSTER_DIMENSIONAL_SHAMBLER_ATTACK_19}
 movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_DIMENSIONAL_SHAMBLER_00a}
 
 [MonsterActivationDimensionalShambler20]
 ability={ffg:MONSTER_DIMENSIONAL_SHAMBLER_MOVE_20}
 master={ffg:MONSTER_DIMENSIONAL_SHAMBLER_ATTACK_20}
 movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_DIMENSIONAL_SHAMBLER_00a}
 
 [MonsterActivationDimensionalShambler21]
 ability={ffg:MONSTER_DIMENSIONAL_SHAMBLER_MOVE_21}
 master={ffg:MONSTER_DIMENSIONAL_SHAMBLER_ATTACK_21}
 movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_DIMENSIONAL_SHAMBLER_00a}
 
 [MonsterActivationDimensionalShambler22]
 ability={ffg:MONSTER_DIMENSIONAL_SHAMBLER_MOVE_22}
 master={ffg:MONSTER_DIMENSIONAL_SHAMBLER_ATTACK_22}
 movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_DIMENSIONAL_SHAMBLER_00a}
 
 [MonsterActivationDimensionalShambler23]
 ability={ffg:MONSTER_DIMENSIONAL_SHAMBLER_MOVE_23}
 master={ffg:MONSTER_DIMENSIONAL_SHAMBLER_ATTACK_23}
 movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_DIMENSIONAL_SHAMBLER_00a}
 
 [MonsterActivationDimensionalShambler24]
 ability={ffg:MONSTER_DIMENSIONAL_SHAMBLER_MOVE_24}
 master={ffg:MONSTER_DIMENSIONAL_SHAMBLER_ATTACK_24}
 movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_DIMENSIONAL_SHAMBLER_00a}
 
 [MonsterActivationHuntingDeepOne01]
 ability={ffg:MONSTER_HUNTING_DEEP_ONE_MOVE_01}
 master={ffg:MONSTER_HUNTING_DEEP_ONE_ATTACK_01}
 movebutton={ffg:UI_NOT_IN_SPACE}
 
-
 [MonsterActivationHuntingDeepOne02]
 ability={ffg:MONSTER_HUNTING_DEEP_ONE_MOVE_02}
 master={ffg:MONSTER_HUNTING_DEEP_ONE_ATTACK_02}
 movebutton={ffg:UI_NOT_IN_SPACE}
 
-
 [MonsterActivationHuntingDeepOne03]
 ability={ffg:MONSTER_HUNTING_DEEP_ONE_MOVE_03}
 master={ffg:MONSTER_HUNTING_DEEP_ONE_ATTACK_03}
 movebutton={ffg:UI_NOT_IN_SPACE}
-
 
 [MonsterActivationHuntingDeepOne04]
 ability={ffg:MONSTER_HUNTING_DEEP_ONE_MOVE_04}
@@ -4403,8 +4424,7 @@ movebutton={ffg:UI_NOT_IN_SPACE}
 [MonsterActivationHuntingDeepOne16]
 ability={ffg:MONSTER_HUNTING_DEEP_ONE_MOVE_16}
 master={ffg:MONSTER_HUNTING_DEEP_ONE_ATTACK_16}
-movebutton={ffg:UI_CANT_MOVE_ADJACENT}
-move={ffg:MONSTER_COMMON_MOVE_02}
+movebutton={ffg:UI_NOT_WITHIN_MOVE}
 
 [MonsterActivationHuntingDeepOne17]
 ability={ffg:MONSTER_HUNTING_DEEP_ONE_MOVE_17}
