Added undead trait to all undead monsters.

--- a/unity/Assets/StreamingAssets/content/D2E/base/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/base/monsters.ini
@@ -38,7 +38,7 @@ name={ffg:BARGHEST}
 image="{import}/img/Monster_Barghest"
 imageplace="{import}/img/Monster_Barghest_Placement"
 info={ffg:INSTRUCTION_BARGHEST}
-traits=melee dark wilderness medium
+traits=melee dark wilderness medium undead
 activation=Brawler1 Brawler2 Brawler3
 
 [MonsterEttin]
