--- a/unity/Assets/StreamingAssets/content/D2E/boxed/mor/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/boxed/mor/monsters.ini
@@ -9,5 +9,5 @@ activation=Range1 Range2 Range3
 name={ffg:WRAITH}
 image="{import}/img/Monster_Wraith"
 info={ffg:INSTRUCTION_WRAITH}
-traits=ranged civilized cursed small
+traits=ranged civilized cursed small undead
 activation=Range1 Range2 Range3
