--- a/unity/Assets/StreamingAssets/content/D2E/boxed/tctr/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/boxed/tctr/monsters.ini
@@ -9,12 +9,12 @@ activation=Skirmisher1 Skirmisher2 Skirmisher3
 name={ffg:DISPOSSESSED}
 image="{import}/img/Monster_Dispossessed"
 info={ffg:INSTRUCTION_DISPOSSESSED}
-traits=melee cursed civilized small
+traits=melee cursed civilized small undead
 
 [MonsterShamblingColossus]
 name={ffg:SHAMBLING_COLOSSUS}
 image="{import}/img/Monster_ShamblingColossus"
 info={ffg:INSTRUCTION_SHAMBLING_COLOSSUS}
-traits=melee cursed wilderness medium
+traits=melee cursed wilderness medium undead
 activation=Brawler1 Brawler2 Brawler3
 imageplace="{import}/img/Monster_ShamblingColossus_Placement"
