--- a/unity/Assets/StreamingAssets/content/D2E/h&m/god/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/h&m/god/monsters.ini
@@ -3,14 +3,14 @@ name={ffg:CRYPT_DRAGON}
 image="{import}/img/Monster_CryptDragon"
 imageplace="{import}/img/Monster_CryptDragon_Placement"
 info={ffg:INSTRUCTION_CRYPT_DRAGON}
-traits=ranged cursed dark massive
+traits=ranged cursed dark massive undead
 activation=Range1 Range2 Range3
 
 [MonsterDarkPriest]
 name={ffg:DARK_PRIEST}
 image="{import}/img/Monster_DarkPriest"
 info={ffg:INSTRUCTION_DARK_PRIEST}
-traits=ranged civilized cursed small
+traits=ranged civilized cursed small undead
 activation=Range1 Range2 Range3
 
 [MonsterWendigo]
