--- a/unity/Assets/StreamingAssets/content/D2E/h&m/soe/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/h&m/soe/monsters.ini
@@ -19,6 +19,6 @@ priority=1
 name={ffg:SHADE}
 image="{import}/img/Monster_Shade"
 info={ffg:INSTRUCTION_SHADE}
-traits=melee cursed cold small
+traits=melee cursed cold small undead
 activation=Skirmisher1 Skirmisher2 Skirmisher3
 priority=1
