--- a/unity/Assets/StreamingAssets/content/D2E/h&m/toc/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/h&m/toc/monsters.ini
@@ -2,7 +2,7 @@
 name={ffg:SKELETON_ARCHER}
 image="{import}/img/Monster_SkeletonArcher"
 info={ffg:INSTRUCTION_SKELETON_ARCHER}
-traits=ranged cursed civilized small
+traits=ranged cursed civilized small undead
 activation=Range1 Range2 Range3
 
 [MonsterCrowHag]
