--- a/unity/Assets/StreamingAssets/content/MoM/pots/items.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/pots/items.ini
@@ -1,4 +1,4 @@
-; yes, the image name is different to the item name. This is no error.
+; Yes, the image name is different to the item name. This is no error.
 [ItemCommonDiskOfItzamna]
 name={ffg:COMMON_ITEM_DISC_OF_ITZAMNA}
 image={import}/img/CommonItem_AncientTalisman
@@ -100,9 +100,10 @@ name={ffg:UNIQUE_ITEM_TURQUOISE_EAGLE}
 image={import}/img/UniqueItem_TurquoiseEagle
 traits=evidence relic unique
 
+; Yes, the key name is ItemUniqueMysteriousSerpent, not ItemUniqueMysteriousSnake, like the name and immage suggest
 [ItemUniqueMysteriousSerpent]
 name={ffg:UNIQUE_ITEM_MYSTERIOUS_SNAKE}
-image={import}/img/UniqueItem_TurquoiseEagle
+image={import}/img/UniqueItem_MysteriousSnake
 traits=ally unique
 
 [ItemSpellBanishment]
