Renamed form POTS to PotS

--- a/unity/Assets/StreamingAssets/content/MoM/pots/content_pack.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/pots/content_pack.ini
@@ -3,7 +3,7 @@
 name={ffg:PRODUCT_TITLE_MAD28}
 description={ffg:PRODUCT_TITLE_MAD28}
 image="{import}/img/MAD28"
-id=POTS
+id=PotS
 type=box
 
 ; Data, all of these files will be read
