Added monster tokens

--- a/unity/Assets/StreamingAssets/content/MoM/pots/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/pots/tokens.ini
@@ -49,14 +49,8 @@ width=256
 
 [TokenTempleDoor]
 image="img/templedoor_token"
-x=0
-y=0
-height=304
-width=256
+pps=100
 
 [TokenTempleDoor2]
 image="img/templedoor2_token"
-x=0
-y=0
-height=304
-width=256
+pps=100
