--- a/unity/Assets/StreamingAssets/content/MoM/sot/items.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/sot/items.ini
@@ -36,7 +36,7 @@ traits=weapon bladedweapon common
 [ItemCommonSwordCane]
 name={ffg:COMMON_ITEM_SWORD_CANE}
 image={import}/img/CommonItem_SwordCane
-traits==weapon bladedweapon heavyweapon common
+traits=weapon bladedweapon heavyweapon common
 
 [ItemCommonToteBag]
 name={ffg:COMMON_ITEM_TOTE_BAG}
